--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@xingrz/decompress-targz",
-	"version": "4.1.1",
+	"version": "5.1.0-alpha.0",
 	"description": "decompress tar.gz plugin",
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
